--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="text/javascript">
+    //const stripe   = Stripe('use your test publishable key');
+    const stripe   = Stripe('pk_test_51NZseaSGyDELcDVJzGeks6fCXMAqlrIXEwNRDrcY26ARh75H6EotDNLfOvkAWOOpFTcZntO3tL7FhNgqpIjMy4tY00zb4k2uC4');
+    const elements = stripe.elements();
+  </script>
 </head>
 <body>
   <app-root></app-root>
